# SPDX-FileCopyrightText: 2023 Philippe Proulx <eeppeliteloop@gmail.com>
# SPDX-License-Identifier: MIT

[tool.poetry]
name = 'normand'
version = '0.23.0'
description = 'Text-to-binary processor with its own language'
license = 'MIT'
authors = ['Philippe Proulx <eeppeliteloop@gmail.com>']
repository = 'https://github.com/efficios/normand'
keywords = [
    'normand',
    'binary',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Compilers',
]
packages = [{include = 'normand'}]

[tool.poetry.dependencies]
python = '^3.4'

[tool.poetry.scripts]
normand = 'normand.normand:_run_cli'

[tool.poetry.urls]
'Bug tracker' = 'https://github.com/efficios/normand/issues'
'Code review' = 'https://review.lttng.org/admin/repos/normand'

[tool.isort]
profile = 'black'
length_sort = true

[tool.pyright]
typeCheckingMode = 'strict'
reportTypeCommentUsage = false

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
